--- a/Transformaciones_Graficas/Form1.resx
+++ b/Transformaciones_Graficas/Form1.resx
@@ -120,70 +120,80 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnMover.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAChSURBVChTjY8BDcIwEEUrYQ56dTAJSMABSMABFnDAHGAB
-        B0hgDsABvF9uyVKOhp/8LP33fq9L/yjnvDWzC3549C2gEeAsqJTykskmH39EwNyO+L5Aa2uToAFgh28R
-        tJj5s97KYW6Hkbn4VAvagA+E3SLMWAtrEW7wFBRmR2K1Jb3AR7G0qSmYj34LsP4T8NWjvvQML+w96gtw
-        0BZ9PUIpvQHjI1jtfr7NpQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAClSURBVChTjY8BDcIwFEQrYQKa9tfBJCABByABB1jAwXCA
+        BRwggTkAB3BXbslSPg2XXJbdf9ffhn+Uc96a2QV+KPoWoBHARKiU8qJTSmeNPwKEuR3h+wKtzU2EBgA7
+        +OZBi2OMz3oqfuZ26BkHn2qBG+ADwm4RzFgLayHc8GFOYRbiqy3xBhr54qamYBr9FsD6Jmy7KuqL19Dp
+        e0V9ARy4hV9FUAhvw3xY1QRdgjUAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnRotar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJiSURBVHhe7ZqBTcJQFEUZwQ0oGzACIzCCm8AGsoFuoBvA
-        BrCBbCAb6HvNbfLT3G8r/Gdv2p7kJFK/vfd9WqWJi5l/pKqqs7tcLtc4NC1Wq9V3o23EDoenQ7oB2ISj
-        XQ0Vvj1+2huATfiyTXjGknHDNqDRNuLdNuIJS8cJGzwVV8MGy8cHG5ppG/EiezVYsbUV3JlH88wGKKGf
-        G5Ea+KXpQ7OyEVreBdHDY4O/NsXs65uVezO35p/+hKUD/qad92AOfwt4ieZdx+D7R4q1B22LDJ1fglao
-        vsdR7OGPr+2BU+38H49sbnFs6Pqyx/BFirWHTs6v9UHICm2ScsUeXNrD27lPpt5HYRu8vu+t3B6HitAa
-        vui5i+HvuBcseek32PkuUPdx2Mrt8Q4dcGha2OAnbMAWh6aFXfqf2IDpPKen+PAuXk6PeQMKbYDdQv7w
-        VN9OCnoX74R6eZofwMu7URq+0TuhXp5mMV7eTRqsJOrl6b2wgzRUSdTL03thB2mokqiXp/fCDtJQJVEv
-        T++FHaShSqJent4LO0hDlUS9PL0XdpCGKol6efxhyMXLu2HhCqJePCxcQdSLh4UriHrxsHAFUS8eFq4g
-        6sXDwhVEvXhYuIKoFw8LVxD14mHhCqJePCxcQdSLh4UriHrxsHAFUS8eFq4g6sXDwhVEvXhYuIKoFw8L
-        VxD14mHhCqJePCxcQdSLh4UriHrxsHAFUS8eFq4g6sXDwhVEvXhYuIKoFw8LVxD14mHhCqJePCxcQdSL
-        h4UriHrxVFV1YwUG9op68fg/JHlgq8CQXnv9k9TMzMyEWCx+AKSN3GpdQ7F3AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJlSURBVHhe7ZrrTcNAEIRTAgXk2UFKoISUQCehA9IBdAAd
+        hA5CB6QD6AB20Zx0suawSW7xyPYnzQ9fLp7Z9V1iS55N/CPr9frkWq1WWwyNi81m85VkjdhjeDzkDUAT
+        jrYa1vh4+DQbgCZ8WBPuMGXYsAYkWSOerRE3mDpMWOG5sBpuMX14sKKZrBEPsqvBgm0t4N50NJ1YATXk
+        54alBr40vWgWNkKLxeIN1v1jhT+mYPP5/HO5XD5ZQ3amP/2F5QX+JjvvwdT/FvAQ6ap74XZ8f02wZqFN
+        wUPnRzDtcQS7+va1WXAuW1Uv1zS3OmnZo/gqwZpFZ+fXuhHyZZiFq/bg0izervqrnV/vVjjtewt3j6Eq
+        5MXXPnc1/Ip7wJpLP+F/bS73wJAefmVwhQ4YGhe+L9GAHYbGhe3/dzRgPM/pOV68C4fjY2pApQbYFvKH
+        p5/tpCDP4pkQr0z6Ag4vRqn4JM+EeGXSZBxeTG6sJMQr03liC7mpkhCvTOeJLeSmSkK8Mp0ntpCbKgnx
+        ynSe2EJuqiTEK9N5Ygu5qZIQr0zniS3kpkpCvDL+MOTC4cUwcwUhXjzMXEGIFw8zVxDixcPMFYR48TBz
+        BSFePMxcQYgXDzNXEOLFw8wVhHjxMHMFIV48zFxBiBcPM1cQ4sXDzBWEePEwcwUhXjzMXEGIFw8zVxDi
+        xcPMFYR48TBzBSFePMxcQYgXDzNXEOLFw8wVhHjxMHMFIV48zFxBiBcPM1cQ4sXDzBWEePEwcwUhXjzM
+        XEGIFw8zVxDixeNvmrIAPeuMePH4C0lu2AjQp86dXpKamJgYEbPZN2tN29qxy0e0AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAENSURBVEhLxZOBDcIwEAM7Ahu03YRRGIUR2AA2gQ3KCN0A
-        NgA7cgo8LpCoEpYsmv97N1FJ8xe1bbujtVxWCO76vr/RfFZ5OSH0lF/Qdd1RZSuwKzB7eBA/cM26kFeh
-        sc7h2ayp/SLWEXaJPM26nUPxbOBB7UnguHMbnq2XPE6CxcaBNHvCkrA+OC6aXB74uKO4Gzy/ndR5Oj0G
-        tg54NpkEQ64/5zwwxobxmGDo1xOQ00iZMFj2DUqFQX6zqwvNZp+cRsqFYd4D+xKF2/tTJO4QPsDpm/BX
-        6887zwNznv5+tXKh0ULr5AKjhdbJBUYLrZMLjBZaJxcYLbROLjBaaJ1cYLTQOn27B+wL/bea5g7Ekz8M
-        PzMoJwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAENSURBVEhLxZSLDcIwEEM7AgP0uwmjMAojsAFsAhuUEboB
+        bADnyinl5KrkVIknWZCcz0kaSvEXmqY5QRxuiwW3Xde9IHzn9HbUdX1LC7Rte+W0xDawM8/Z1NPfY4x5
+        Wr6xwj6FJ2GO5S8wb2EP74cwL/uqqroLc8/yBHa4FJ7ERT4nscFBGSHUaBuxx3hRPi/4xoa1HfndqJMq
+        Tae35qMyzAXPaDZUfUmpYfAFoWE0G7+eAD625JF9B7ngPsqyfKrQJNTn95aNNe+XFmG4fH+ywA7xGNKd
+        4BPj1Z2vXeL084uiQr1ojaECvWiNoQK9aI2hAr1ojaECvWiNoQK9aI2hAr1ojbH2HoT/xLanKN6dtj6R
+        xIKzmwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnCirculo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADZSURBVEhL3ZTrDYMwEIMzCtmoG5SN2g3KRrABbFJsyemp5UDkKD/aT7KEDtshvNL/0zRNCz2g
-        Puf8pHis2VW2ehC+QGMpXRM99Cq2DwTuXtmWkLkpvk2kvIhZ1fhwq16wRuxQ3RIYps9ArbDAqLp3cKL1
-        AhG5u8Cw88wRsUu1BoaDZ44IXb1qDc94RKo1PNMRqdb48i0aVGvwwXjmiNilWgPDc19TgpOHPzRoUt0S
-        ruwEqrR69QUYzvvZFSKL7C4vcKsI7nkmE72K1cMw1EGv74THmsWLf4SUZjRrtw3Qt+EaAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANlJREFUSEvd
+        lOsNgzAQgzMK2agblI3aDcpGsAFsUmzJ6anlQOQoP9pPsoQO2yG80v/TNE0LPaA+5/ykeKzZVbZ6EL5A
+        YyldEz30KrYPBO5e2ZaQuSm+TaS8iFnV+HCrXrBG7FDdEhimz0CtsMCoundwovUCEbm7wLDzzBGxS7UG
+        hoNnjghdvWoNz3hEqjU80xGp1vjyLRpUa/DBeOaI2KVaA8NzX1OCk4c/NGhS3RKu7ASqtHr1BRjO+9kV
+        IovsLi9wqwjueSYTvYrVwzDUQa/vhMeaxYt/hJRmNGu3DdC34RoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnRectangulo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAABmSURBVEhL7ZTBCYBQDEM7SruJ+y9hR3AD/YH8y4dA9SAifZBDIGluteZ7uPs2tEfEeUfooMsz
-        mhHOtVwVRnhGM8O0Zcq9HqDV9ACtpgdoNb8YOGb4gZJnNHi5CC7FirL0rpuXMbsAdGWW5X4IyUQAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGZJREFUSEvt
+        lMEJgFAMQztKu4n7L2FHcAP9gfzLh0D1ICJ9kEMgaW615nu4+za0R8R5R+igyzOaEc61XBVGeEYzw7Rl
+        yr0eoNX0AK2mB2g1vxg4ZviBkmc0eLkILsWKsvSum5cxuwB0ZZblfgjJRAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnPoligono.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAACaSURBVEhLYxgFo4BBQUFhAxALQLnUB4qKiv+BFrwH4nyoEHUByAIYBlqyH4gVoFLUAcgWIFlU
-        D5WmHGCzAISBlpwHYgeoMvIBNsORMdCSfiAmPxFgMxQdAy24D8QBUC2kAWwGYsEPaGYB0OAJNAkioKEX
-        gJg2kQw0uAEqTTlAM/gAENMko30AmlsAFaIuABpM28JuFAx1wMAAAMuqbwBN5ucqAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAJpJREFUSEtj
+        GAWjgEFBQWEDEAtAudQHioqK/4EWvAfifKgQdQHIAhgGWrIfiBWgUtQByBYgWVQPlaYcYLMAhIGWnAdi
+        B6gy8gE2w5Ex0JJ+ICY/EWAzFB0DLbgPxAFQLaQBbAZiwQ9oZgHQ4Ak0CSKgoReAmDaRDDS4ASpNOUAz
+        +AAQ0ySjfQCaWwAVoi4AGkzbwm4UDHXAwAAAy6pvAE3m5yoAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="tmrUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
