--- a/Transformaciones_Graficas/Properties/Resources.resx
+++ b/Transformaciones_Graficas/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="photo_size_select_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\photo_size_select_small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="format_shapes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\format_shapes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="rotate-right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rotate-right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="play_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\play_arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="format_shapes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\format_shapes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="people" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\people.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
